# EmailClassifier

./: .dockerignore  README.md  docker-compose.yml  render.yaml
backend/: .gitignore  Dockerfile  Makefile  pyproject.toml
backend/app/: Dockerfile  main.py  schemas.py
backend/app/services/: classifier.py  extractor.py
frontend/: Dockerfile  eslint.config.ts  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/@types/: EmailClassificationResult.ts
frontend/src/assets/css/: main.css
frontend/src/components/base/: LoadingSpinner.vue
frontend/src/components/emailClassification/: ClassificationResult.vue  EmailClassificationForm.vue  HomeHeader.vue
frontend/src/router/: index.ts
frontend/src/services/: ApiService.ts
frontend/src/views/: HomeView.vue
