[project]
name = "backend"
version = "1.0.0"
description = "Backend do app emailClassifier"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "pymupdf", 
    "google-generativeai",
    "python-dotenv",
    "click", 
    "h11",   
    "uvloop", 
    "watchfiles"
]

[project.optional-dependencies]
dev = [
    "ruff"
]
